--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body{
 #titleScene{
   background-color: rgb(109, 13, 13)
 }
-#titleImage{
+#titleImage img{
   width: 100%;   /* 画面全体の幅 */
   height: 100%;  /* 画面全体の高さ */
 }
@@ -50,7 +50,7 @@ body{
   position: relative;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  background-size: contain;
 }
 
 #fadeOverlay {
@@ -93,16 +93,19 @@ body{
   width: 100%;   /* 画面全体の幅 */
   height: 100%;  /* 画面全体の高さ */
   z-index: 1;
+  background-size: contain;
 }
 
 #startButtonImage{
   background-image: url("images/startButton.png");
   position: absolute;
-  top: 300px;   /* 画面全体の幅 */
-  left: 340px;
+  top: 45%; /* 画面の高さの50%の位置 */
+  left: 50%; /* 画面の幅の50%の位置 */
+  transform: translate(-50%, -50%);
   width: 255px;
   height: 60px;
   z-index: 2;
+  background-size: contain;
 }
 
 #gameIntro {
