--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,19 @@ html {
 
 body{
   display: flex;
-  justify-content: center; /* 水平方向の中央揃え */
+  flex-direction: column;
+  justify-content: flex-start; /* 水平方向の中央揃え */
   align-items: center; /* 垂直方向の中央揃え */
   min-height: 10vh; /* ビューポートの高さに合わせる */
   margin: 0; /* デフォルトのマージンを削除 */
+  background-color: #100029;
+}
+
+
+#outerDescription{
+  width: 80%; /* 幅を調整する */
+  margin-top: 10px;
+  color: #ffffff;
 }
 
 .scene {
