--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,8 @@ body{
   font-size: 40px;
   top: 350px;
   left:320px;
-  color: rgb(200, 140, 0)
+  color: rgb(200, 140, 0);
+  display: none;
 }
 
 #oneMore{
