--- a/FlappyTotetsu/styles.css
+++ b/FlappyTotetsu/styles.css
@@ -49,11 +49,20 @@ body{
 }
 
 #gameScene{
+  position: relative; /* この行を追加 */
   background-color: rgb(109, 13, 13)
 }
-#titleImage img{
-  width: 100%;   /* 画面全体の幅 */
-  height: 100%;  /* 画面全体の高さ */
+
+#oneMore {
+  position: absolute;
+  top: 600px;
+  left: 150px;
+}
+
+#Tweet {
+  position: absolute;
+  top: 600px;
+  left: 580px;
 }
 
 .backImage {
@@ -219,102 +228,3 @@ body{
 }
 
 
-.result {
-  position: absolute;
-  width: 900px;
-  height: 700px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-#scoreResult{
-  position: absolute;
-  font-size: 40px;
-  top: 350px;
-  left:320px;
-  color: rgb(200, 140, 0);
-  display: none;
-}
-
-#oneMore{
-  position: absolute;
-  top: 600px;
-  left:150px;
-}
-
-#Tweet{
-  position: absolute;
-  top: 600px;
-  left: 580px;
-}
-
-#textArea{
-  display: flex;
-  justify-content: center; /* 水平方向の中央揃え */
-  align-items: center; /* 垂直方向の中央揃え */
-  height: 60px;
-}
-
-.textBox{
-  padding: 10px;
-  background-color: rgba(0, 0, 0, 0.274);
-  color: #ffffff;
-  border-radius: 10px;
-  border: 3px solid #ffffff;
-  display: none; /* ボックスの幅を内容に合わせる */
-  font-size: 24px;
-}
-
-#text span.current {
-  color: red;
-}
-#text span {
-  color: rgb(255, 255, 255);
-}
-
-#messageArea{
-  position: absolute;
-  top: 300px;
-  width: 930px;
-  justify-content: center; /* 水平方向の中央揃え */
-  align-items: center; /* 垂直方向の中央揃え */
-  text-align: center;
-  z-index: -1;
-}
-
-#message{
-  color: rgb(216, 4, 4);
-  font-size: 60px;
-}
-
-
-#buttonArea{
-  position: absolute;
-  height: 326px;
-  display: grid;
-  grid-template-columns: repeat(14, 64px);
-  grid-gap: 2px;
-  padding: 2px 2px;
-  justify-content: center;
-  z-index: 3;
-}
-
-@keyframes blink {
-
-  0%,
-  100% {
-    outline: 3px solid rgb(209, 127, 4);
-  }
-
-  50% {
-    outline: none;
-  }
-}
-
-.blinking-outline {
-  animation: blink 0.7s linear infinite;
-}
