--- a/FlappyTotetsu/styles.css
+++ b/FlappyTotetsu/styles.css
@@ -124,18 +124,21 @@ body{
   position: absolute;
   top: 288px;
   left:280px;
+  z-index: 3;
 }
 
 #chargeMotion{
   position: absolute;
   top: 288px;
   left:280px;
+  z-index: 3;
 }
 
 #damageMotion {
   position: absolute;
   top: 288px;
   left: 280px;
+  z-index: 3;
 }
 
 #totetsuHead{
@@ -144,7 +147,7 @@ body{
   height: 100px;
   top: -100px;
   left: -100px;
-  z-index: 31;
+  z-index: 36;
   transform: translate(-50%,-50%);
 }
 
@@ -154,8 +157,6 @@ body{
   height: 300px;
   top: 0px;
   left: 0px;
-  
-  
 }
 .sprites {
   width: 40px; /* 分割後の画像の幅 */
@@ -165,11 +166,62 @@ body{
   
 }
 
-.backImage {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-size: contain;
+#hand{
+  position: absolute;
+  width: 50px; /* 元の画像の幅に合わせる */
+  height: 700px;
+  top: 0px;
+  left: 0px;
+}
+.sprites {
+  width: 50px; /* 分割後の画像の幅 */
+  height: 700px; /* 分割後の画像の高さ */
+  position: absolute;
+  z-index: 3;
+}
+
+#background1-1{
+  position: absolute;
+    width: 1000px;/* 元の画像の幅に合わせる */
+    height: 750px;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+}
+#background1-2{
+  position: absolute;
+    width: 1000px;/* 元の画像の幅に合わせる */
+    height: 750px;
+    top: 0px;
+    left: 1000px;
+    z-index: 2;
+}
+
+#background2-1{
+  position: absolute;
+    width: 1000px;/* 元の画像の幅に合わせる */
+    height: 750px;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+}
+
+#background2-2{
+  position: absolute;
+    width: 1000px;/* 元の画像の幅に合わせる */
+    height: 750px;
+    top: 0px;
+    left: 1000px;
+    z-index: 1;
+}
+
+#play{
+  position: absolute;
+    width: 150px;/* 元の画像の幅に合わせる */
+    height: 75px;
+    top: 500px;
+    left: 300px;
+    z-index: 4;
 }
 
 #fadeOverlay {
