--- a/FlappyTotetsu/styles.css
+++ b/FlappyTotetsu/styles.css
@@ -61,11 +61,38 @@ body{
 #score {
   top: 30px;
   left: 70px;
-  width: 120px;
+  width: 300px;
   /* 外枠の幅 */
-  font-size: 24px;
+  font-size: 36px;
   position: absolute;
-  color: rgb(200, 140, 0)
+  color: rgb(200, 140, 0);
+  z-index: 4;
+}
+
+#score2 {
+  top: 330px;
+  left: 280px;
+  width: 500px;
+  /* 外枠の幅 */
+  font-size: 57px;
+  font-weight: bold;
+  -webkit-text-stroke: 3px #000;
+  position: absolute;
+  z-index: 40;
+  color: rgb(131, 0, 0);
+}
+
+#bestscore {
+  top: 430px;
+  left: 310px;
+  width: 500px;
+  /* 外枠の幅 */
+  font-size: 57px;
+  font-weight: bold;
+  position: absolute;
+  z-index: 40;
+  color: rgb(131, 0, 0);
+  -webkit-text-stroke: 3px #000;
 }
 
 #barO {
@@ -99,20 +126,23 @@ body{
   position: absolute;
   top: 600px;
   left: 150px;
-  z-index: 3;
+  z-index: 40;
 }
 
 #Tweet {
   position: absolute;
   top: 600px;
   left: 580px;
-  z-index: 3;
+  z-index: 40;
 }
 
 #titleText {
   position: absolute;
-  top: 100px;
-  left: 150px;
+  width: 400px;
+  height: 180px;
+  top: 60px;
+  left: 265px;
+  z-index: 3;
 }
 
 #introduction{
@@ -122,24 +152,24 @@ body{
   z-index: 5;
 }
 
+#base{
+  position: absolute;
+  top: 420px;
+  left:310px;
+  z-index: 2;
+}
+
 #waitMotion{
   position: absolute;
-  top: 288px;
+  top: 350px;
   left:280px;
   z-index: 3;
 }
 
 #chargeMotion{
   position: absolute;
-  top: 288px;
+  top: 350px;
   left:280px;
-  z-index: 3;
-}
-
-#damageMotion {
-  position: absolute;
-  top: 288px;
-  left: 280px;
   z-index: 3;
 }
 
@@ -236,6 +266,13 @@ body{
     top: 0px;
     left: 1000px;
     z-index: 1;
+}
+
+#result{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 40;
 }
 
 #play{
