大体形完成

--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ main {
     flex-wrap: wrap;
     justify-content: center;
     max-width: 1000px;
-    gap: 20px;
-    padding: 20px;
+    gap: 0px;
+    padding: 0px;
     box-sizing: border-box;
     margin: 0 auto; /* 中央に配置 */
     
@@ -49,11 +49,12 @@ main {
         "whats-new content";
     grid-template-columns: 60% 40%;
     grid-template-rows: 60% 40%;
-    gap: 40px;
-    width: 960px;
-    height: 460px;
-    margin: 0 auto;
-    position: relative;
+    gap: 20px;
+    width: 980px;
+    height: 480px;
+    margin: 0 auto ;
+    box-sizing: border-box;
+    transform: translateX(-10px); /* gapの半分だけ左にずらす */
 }
 
 
@@ -61,9 +62,9 @@ main {
 .information, .whats-new {
     box-sizing: border-box;
     overflow-y: scroll;
-    padding: 10px;
+    padding: 5px 20px;
 
-    background-color: #232125;
+    background-color: #141b22;
 }
 
 .information {
@@ -77,8 +78,8 @@ main {
 .content {
     grid-area: content;
     box-sizing: border-box;
-    background-color: #232125;
-    padding: 10px;
+    background-color: #141b22;
+    padding: 5px 20px;
 }
 
 @media (max-width: 740px) {
