--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     border-color:#74e9f9;
     overflow: hidden;
 	max-width: 1000px;
+    height: auto;
 	margin: 30px auto 0;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.4);
 	border-radius: 20px;	/*角丸のサイズ*/
@@ -146,7 +147,6 @@ footer .social-icons img {
 
 /*-----------------------------------------------------*/
 /*工事中 page*/
-/*About領域*/
 .kouji{
     color: #2ea3b2;
     text-align: left;
@@ -186,6 +186,7 @@ footer .social-icons img {
     margin: 10px auto; /* 枠内で中央に表示 */
 }
 
+/*説明部分*/
 .about_text{
     color: #2ea3b2;
     text-align: left;
@@ -309,12 +310,13 @@ footer .social-icons img {
 }
 
 /* タイトル */
-.blog_title {
+#blog-title {
     font-size: 2em;
     font-weight: bold;
     color: #2ea3b2;
-    text-align: left;
+    text-align: center;
     margin-bottom: 10px;
+    line-height: 100%;
 }
 
 /* 区切り線 */
@@ -327,18 +329,20 @@ footer .social-icons img {
 
 @media (max-width: 740px) {
     .main_contents {
-        display: flex;
-        flex-wrap: wrap;
-        width: 740px;
-    }
-
-    .information, .whats-new {
+        display: grid;
+        grid-auto-flow: column;
+        grid-template-areas: 
+        "information"
+        "emp1"
+        "whats-new"
+        "emp2"
+        "content";
+        grid-template-columns: 100%;
+        grid-template-rows: 200px 5px 200px 5px 440px;
         width: 100%;
-        height: 200px;
-    }
-    .content {
-        width: 100%;
-        height: 460px;
+        min-height: 850px;
+        margin: 0 auto ;
+        box-sizing: border-box;
     }
 }
 
